--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fullcalendar/core": "^4.3.1",
+        "@fullcalendar/daygrid": "^4.3.0",
+        "@fullcalendar/list": "^4.3.0",
+        "@fullcalendar/timegrid": "^4.3.0",
+        "jquery-asRange": "^0.3.4",
         "pretty-checkbox": "^3.0.3",
         "pretty-checkbox-vue": "^1.1.9",
+        "sticky-sidebar": "^3.3.1",
         "sweetalert2": "^8.17.1"
     }
 }
