--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "pretty-checkbox": "^3.0.3",
         "pretty-checkbox-vue": "^1.1.9",
         "sticky-sidebar": "^3.3.1",
-        "sweetalert2": "^8.17.1"
+        "sweetalert2": "^8.17.1",
+        "vue-range-component": "^1.0.3"
     }
 }
