--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "pretty-checkbox-vue": "^1.1.9",
         "sticky-sidebar": "^3.3.1",
         "sweetalert2": "^8.17.1",
+        "v-calendar": "^1.0.0-beta.22",
+        "vue-cal": "^2.12.1",
         "vue-range-component": "^1.0.3"
     }
 }
