--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     },
     "dependencies": {
         "@cometchat-pro/chat": "^2.0.4",
-        "@fullcalendar/core": "^4.3.1",
-        "@fullcalendar/daygrid": "^4.3.0",
+        "@fullcalendar/core": "^4.4.0",
+        "@fullcalendar/daygrid": "^4.4.0",
         "@fullcalendar/list": "^4.3.0",
         "@fullcalendar/timegrid": "^4.3.0",
+        "@fullcalendar/vue": "^4.4.0",
+        "echarts": "^4.7.0",
         "jquery-asRange": "^0.3.4",
         "pretty-checkbox": "^3.0.3",
         "pretty-checkbox-vue": "^1.1.9",
         "sticky-sidebar": "^3.3.1",
         "sweetalert2": "^8.17.1",
         "v-calendar": "^1.0.0-beta.23",
+        "v-charts": "^1.19.0",
         "vue-cal": "^2.12.1",
         "vue-date-pick": "^1.3.0",
         "vue-owl-carousel": "^2.0.3",
