--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@fullcalendar/list": "^4.3.0",
         "@fullcalendar/timegrid": "^4.3.0",
         "@fullcalendar/vue": "^4.4.0",
+        "@toast-ui/vue-editor": "^2.2.0",
         "echarts": "^4.7.0",
         "geoip-country": "^4.0.20",
         "jquery-asRange": "^0.3.4",
@@ -50,6 +51,7 @@
         "vue-range-component": "^1.0.3",
         "vue-slider-component": "^3.1.4",
         "vue-wysiwyg": "^1.7.2",
+        "vue2-editor": "^2.10.2",
         "vue2-timepicker": "^1.0.8",
         "vuedraggable": "^2.23.2",
         "vuejs-datepicker": "^1.6.2",
